--- a/task/src/main/webapp/WEB-INF/views/user/users-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/user/users-fargment.html
@@ -26,11 +26,12 @@
                     <div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${user.username})}"
                          data-dropdown data-auto-focus="true" data-close-on-click="true">
                         <ul class="menu vertical">
-                            <li><a data-th-href="@{pass(username=${user.username})}"
-                                   data-th-text="#{buttonname.changePass}">change pass</a></li>
+                            <li>
+                                <a data-th-href="@{pass/{username}(username=${user.username})}" data-th-text="#{buttonname.changePass}">change pass</a>
+                            </li>
                             <li><a data-th-href="@{edit/{username}(username=${user.username})}" data-th-text="#{buttonname.edit}">edit</a>
                             </li>
-                            <li><a data-th-href="@{del(username=${user.username})}" data-th-text="#{buttonname.delete}">delete</a>
+                            <li><a data-th-href="@{del/{username}(username=${user.username})}" data-th-text="#{buttonname.delete}">delete</a>
                             </li>
                         </ul>
                     </div>
@@ -49,61 +50,14 @@
     <form data-th-replace="user/user-form-fragment :: ${nameFragment}(#{titleform.edit},@{{username}(username=${user.username})})"></form>
 </div>
 
-
-<form method="post" data-th-fragment="core-form(titleForm, urlForm)" data-th-action="${urlForm}" data-th-object="${user}">
-
-    <div class="medium-12 columns">
-        <h3 data-th-text="${titleForm}">title form</h3>
-    </div>
-
-    <!-- username-->
-    <div data-th-replace="templates/input-custom :: input-text-12(#{inputlabel.username},'username')"></div>
-
-    <!-- pass -->
-    <div data-th-replace="templates/input-custom :: input-pass-12(#{inputlabel.password},'password')"></div>
-
-    <!-- change pass -->
-    <div data-th-replace="templates/input-custom :: input-pass-12(#{inputlabel.repeatPassword},'repeatPassword')"></div>
-
-    <!-- role -->
-    <div class="medium-12 columns">
-        <label>
-            <span data-th-text="#{titleform.roles}"></span>:
-            <input type="checkbox" name="role" data-th-each="role : ${roles}" data-th-text="${role.roleName} + ' '"
-                   data-th-field="*{selectedRole}" data-th-value="${role.roleId}">
-        </label>
-    </div>
-
-    <!-- disable -->
-    <div data-th-replace="templates/input-custom :: input-checkbox-12(#{inputlabel.isdisable}, 'enabled')"></div>
-
-    <!-- button submit -->
-    <div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
-
-</form>
-
-
-
-<!-- form add -->
-<div data-th-fragment="form-add" data-th-remove="tag">
-    <form data-th-action="@{add}" method="POST" data-th-object="${user}">
-        <div class="medium-12 columns">
-            <h3 data-th-text="#{titleform.new}">new</h3>
-        </div>
-        <!-- name -->
-        <div class="medium-12 columns">
-            <label data-th-class="${#fields.hasErrors('username')}? 'is-invalid-label'"
-                   data-th-text="#{inputlabel.username}"></label>
-            <input data-th-class="${#fields.hasErrors('username')}? 'is-invalid-input'" type="text" id="username"
-                   name="username" data-th-field="*{username}" data-th-placeholder="#{inputlabel.username}"
-                   autofocus="autofocus"/>
-            <span class="form-error is-visible" data-th-errors="*{username}"></span>
-        </div>
-        <div data-th-replace="user/users-fargment :: chenge-pass" data-th-remove="tag"></div>
-        <div data-th-replace="user/users-fargment :: core-form" data-th-remove="tag"></div>
-        <div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
-    </form>
+<div data-th-fragment="change-pass-user" data-th-remove="tag">
+    <form data-th-replace="user/user-form-fragment :: ${nameFragment}(#{titleform.userChangePass(${userChangePass.username})},@{{uasername}(username=${userChangePass.username})})"></form>
 </div>
+
+<div data-th-fragment="delete-user" data-th-remove="tag">
+    <for data-th-insert="user/user-form-fragment :: ${nameFragment}(#{titleform.deleteUser},@{delete})"></for>
+</div>
+<!-- -->
 
 <!-- delete form -->
 <div data-th-fragment="form-del" data-th-remove="tag">
@@ -120,53 +74,3 @@
         <div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
     </form>
 </div>
-
-<!-- form change password -->
-<div data-th-fragment="form-pass" data-th-remove="tag">
-    <form data-th-action="@{pass}" method="POST" data-th-object="${userChangePass}">
-        <div class="medium-12 columns">
-            <h3 data-th-text="#{titleform.userChangePass(${userChangePass.username})}">title</h3>
-        </div>
-        <div class="medium-12 columns">
-            <input type="hidden" id="username" name="username" data-th-field="*{username}"/>
-        </div>
-        <div data-th-replace="user/users-fargment :: chenge-pass" data-th-remove="tag"></div>
-        <div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
-    </form>
-</div>
-
-<!-- form edit user -->
-<div data-th-fragment="form-edit" data-th-remove="tag">
-    <form data-th-action="@{edit}" method="post" data-th-object="${user}">
-        <div class="medium-12 columns">
-            <h3 data-th-text="#{titleform.edit}">title</h3>
-            <h3 data-th-text="*{username}">username</h3>
-        </div>
-        <div>
-            <input type="hidden" id="username" name="username" data-th-field="*{username}"/>
-        </div>
-        <div data-th-replace="user/users-fargment :: core-form" data-th-remove="tag"></div>
-        <div data-th-text="*{enabled}"></div>
-        <div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
-    </form>
-</div>
-
-<div data-th-fragment="core-form-old" data-th-remove="tag">
-
-    <!-- role -->
-    <div class="medium-12 columns">
-        <label>
-            <span data-th-text="#{titleform.roles}"></span>:
-            <input type="checkbox" name="role" data-th-each="role : ${roles}" data-th-text="${role.roleName} + ' '"
-                   data-th-field="*{selectedRole}" data-th-value="${role.roleId}">
-        </label>
-    </div>
-    <!-- disable -->
-    <div class="medium-12 small-12 columns">
-        <label data-th-text="#{inputlabel.isdisable}"></label>
-        <input type="checkbox" id="enabled" data-th-field="*{enabled}">
-    </div>
-</div>
-
-
-
