--- a/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
+++ b/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
@@ -59,7 +59,9 @@
         <h3 data-th-text="${titleForm}">title form</h3>
     </div>
 
-
+    <div class="medium-12 columns">
+        <h4 data-th-text="#{placeholder.userdell(${user.username})}"></h4>
+    </div>
 
     <!-- button submit -->
     <div data-th-insert="templates/core-tag :: button-submit"></div>
