editing active user

--- a/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
+++ b/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
@@ -79,8 +79,8 @@
         </label>
     </div>
 
-    <!-- disable -->
-    <div data-th-replace="templates/input-custom :: input-checkbox-12(#{inputlabel.isdisable}, 'enabled')"></div>
+    <!-- is active user -->
+    <div data-th-replace="templates/input-custom :: input-checkbox-12(#{inputlabel.isActtive}, 'enabled')"></div>
 
 </div>
 
