--- a/task/src/main/webapp/WEB-INF/views/employee/employees.html
+++ b/task/src/main/webapp/WEB-INF/views/employee/employees.html
@@ -1,39 +1,27 @@
 <!DOCTYPE html>
 <html>
 
-	<head data-th-replace="templates/head :: head(#{titleform.positions})"></head>
+	<head data-th-replace="templates/head :: head(#{titleform.emploee})"></head>
 	
 <body>
+	<nav id="header" data-th-replace="fragments/nav :: core-nav(#{titleform.emploee})"></nav>
 
-	<div class="app-dashboard shrink-medium">
-			<div class="row expanded app-dashboard-top-nav-bar">
-				<div class="columns medium-2">
-					<button data-toggle="app-dashboard-sidebar"	class="menu-icon hide-for-medium"></button>
-					<a class="app-dashboard-logo" data-th-text="#{titleform.emploee}"></a>
-				</div>
-				<div class="columns show-for-medium">
-				
-				</div>
-				<div data-th-insert="templates/menu/logof-logon.html"></div>
-			</div>
-	
-			<div class="app-dashboard-body off-canvas-wrapper">
-				<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
-					<div class="app-dashboard-sidebar-inner">
-						<ul  data-th-replace="fragments/menu :: home-admin"></ul>
-					</div>
-				</div>
-	
-				<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
-					<div data-th-replace="fragments/employee-fargment :: table-employee"></div>
-				</div>
-			</div>
+	<div class="row flex-container expanded">
+		<div class="columns medium-2">
+			<ul id="componentMenu" class="vertical menu">
+				<li data-th-replace="templates/menu :: top-admin"></li>
+			</ul>
 		</div>
+		<div class="columns medium-10">
+
+		</div>
+	</div>
+
 	<!-- modal window delete -->
 	<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;"></div>
-	
-	<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
-	<script type="module" data-th-src="@{/resources/js/employee.js}"></script>
+
+	<script data-th-replace="fragments/core-script :: core-script"></script>
+	<script type="text/javascript" data-th-src="@{/resources/js/menu.js}"></script>
 	
 </body>
 </html>
