--- a/task/src/main/webapp/WEB-INF/views/templates/head.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/head.html
@@ -1,5 +1,5 @@
     
-	<head data-th-fragment="head(titleName)">
+	<head data-th-fragment="head(title)">
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" data-th-href="@{/webjars/foundation/dist/css/foundation.min.css}">
@@ -9,5 +9,5 @@
 		<link data-th-href="@{/resources/css/app.css}" rel="stylesheet" />
 		<script type="application/javascript" data-th-src="@{/webjars/jquery/jquery.js}"></script>
 		<script type="application/javascript" data-th-src="@{/webjars/foundation/dist/js/foundation.js}"></script>
-		<title data-th-utext="${titleName}">title</title>
+		<title data-th-replace="${title}">Title page</title>
 	</head>
