--- a/task/src/main/webapp/WEB-INF/views/home.html
+++ b/task/src/main/webapp/WEB-INF/views/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ua">
 
-<head data-th-replace="templates/head :: head(~{::titl})">
+<head data-th-replace="templates/head :: head(~{::title})">
 	<title data-th-text="#{titleform.home}"></title>
 </head>
 
