migrate spring boot

--- a/task/src/main/webapp/WEB-INF/views/fragments/nav.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/nav.html
@@ -27,7 +27,7 @@
 						<a href="#">+</a>
 						<ul class="submenu menu vertical" data-submenu> 
 							<li data-sec-authorize="hasAnyAuthority('user:write')">
-								<a data-th-href="@{/users/add/}" data-th-text="#{label.newuser}" >add user</a>
+								<a data-th-href="@{/users/add}" data-th-text="#{label.newuser}" >add user</a>
 							</li>
 							<li data-sec-authorize="hasAnyAuthority('ADMINISTRATOR','HR')">
 								<a>add employee</a>
