add new function room

--- a/task/src/main/webapp/WEB-INF/views/home.html
+++ b/task/src/main/webapp/WEB-INF/views/home.html
@@ -13,7 +13,7 @@
 		
 		<div data-th-replace="templates/colout :: home-colout(titleColout='titleform.admin', urlModule='/employee/', description='')"></div>
 		
-		<div data-th-replace="templates/colout :: home-colout(titleColout='titleform.home.directories', urlModule='/position/', description='')"></div>
+		<div data-th-replace="templates/colout :: home-colout(titleColout='titleform.home.directories', urlModule='/room/', description='')"></div>
 		
 	</div>
 
