--- a/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
@@ -19,7 +19,7 @@
 									<button class="button fi-list" data-th-classappend="${position.disable} ? 'hollow'" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${position.id})}" ></button>
 									<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${position.id})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
 										<ul class="menu vertical" data-sec-authorize="hasAnyAuthority('ADMINISTRATOR','HR')">
-	    									<li><a data-th-href="@{edit/{id}(id=${position.id})}" data-th-text="#{buttonname.edit}" data-th-attr="data-ajax-url='edit/?id='+${position.id}"></a></li>
+	    									<li><a data-th-href="@{edit/{id}(id=${position.id})}" data-th-text="#{buttonname.edit}"></a></li>
 	      									<li><a data-open="deleteRecord" data-th-attr="data-position-id=${position.id}" data-th-text="#{buttonname.delete}"></a></li>
 	      								</ul>
 	      				 			</div>
