--- a/task/src/main/webapp/WEB-INF/views/templates/nav.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/nav.html
@@ -34,7 +34,7 @@
 							</li>
 						</ul>
 					</li>
-					<li data-th-replace="templates/button-login-logoff :: login-logoff" data-th-remove="tag">button login logoff</li>
+					<li data-th-replace="~{templates/button-login-logoff :: login-logoff}" data-th-remove="tag">button login logoff</li>
 				</ul>
 			</div>
 		</div>
