--- a/task/src/main/webapp/WEB-INF/views/login.html
+++ b/task/src/main/webapp/WEB-INF/views/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ua">
 
-	<head data-th-replace="~{templates/head :: head(~{::title})}">
-		<title data-th-text="#{titleform.login}"></title>
+	<head data-th-replace="~{templates/head :: head(#{titleform.login})}">
+		<title>login</title>
 	</head>
 	
 	<body>
