--- a/task/src/main/webapp/WEB-INF/views/company/company.html
+++ b/task/src/main/webapp/WEB-INF/views/company/company.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html>
-	<head data-th-replace="templates/head :: head(#{titleform.company})"></head>
-	
+<html lang="ua">
+	<head data-th-replace="~{templates/head :: head(#{titleform.company})}">
+		<title>title company</title>
+	</head>
+
 	<body>
 
+		<nav data-th-insert="~{templates/nav :: core-nav(#{titleform.company})}" ></nav>
+
+		<div class="row flex-container expanded">
+			<div class="columns medium-2">
+				<ul id="componentMenu" class="vertical menu">
+					<li data-th-insert="~{templates/menu :: top-directories}"></li>
+				</ul>
+			</div>
+			<div class="columns medium-10">
+				<!-- <div data-th-insert="~{room/room-fragments :: ${nameFragment}}"></div> -->
+			</div>
+		</div>
+<!--
 	<div class="app-dashboard shrink-medium">
 			<div class="row expanded app-dashboard-top-nav-bar">
 				<div class="columns medium-2">
@@ -29,10 +44,10 @@
 		</div>
 		
 		<!-- modal window delete -->
+		<!--
 		<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;"></div>
-	
-		<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
-
-		<script type="module" data-th-src="@{/resources/js/company.js}"></script>
+		-->
+		<script data-th-replace="~{templates/core-script :: core-script}"></script>
+		<script type="text/javascript" data-th-src="@{/resources/js/menu.js}"></script>
 	</body>
 </html>
