--- a/task/src/main/webapp/WEB-INF/views/room/room-fragments.html
+++ b/task/src/main/webapp/WEB-INF/views/room/room-fragments.html
@@ -10,7 +10,7 @@
         <tr>
             <th data-th-text="#{inputlabel.numberRoom}"></th>
             <th data-sec-authorize="hasAnyAuthority('room:write')">
-                <uL data-th-replace="templates/core-tag :: button-add"></uL>
+                <uL data-th-replace="~{templates/core-tag :: button-add}"></uL>
             </th>
         </tr>
     </thead>
@@ -25,11 +25,11 @@
   </table>
 
     <div data-th-fragment="room-add" data-th-remove="tag">
-        <form data-th-replace="room/room-fragments :: core-form-foom(#{titleform.new},@{add})"></form>
+        <form data-th-replace="~{room/room-fragments :: core-form-foom(#{titleform.new},@{add})}"></form>
     </div>
 
     <div data-th-fragment="room-edit" data-th-remove="tag">
-        <form data-th-replace="room/room-fragments :: core-form-foom(#{titleform.edit},@{/room/edit})"></form>
+        <form data-th-replace="~{room/room-fragments :: core-form-foom(#{titleform.edit},@{/room/edit})}"></form>
     </div>
 
     <form method="post" data-th-fragment="core-form-foom(title,url)" data-th-action="${url}" data-th-object="${room}">
@@ -38,9 +38,9 @@
             <h3 data-th-text="${title}">new room</h3>
         </div>
 
-        <div data-th-replace="templates/input-custom :: input-text-12(#{inputlabel.numberRoom},'numberRoom')"></div>
+        <div data-th-replace="~{templates/input-custom :: input-text-12(#{inputlabel.numberRoom},'numberRoom')}"></div>
 
-        <div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
+        <div data-th-replace="~{templates/core-tag :: button-submit}" data-th-remove="tag"></div>
 
     </form>
 
