--- a/task/src/main/webapp/WEB-INF/views/room/room.html
+++ b/task/src/main/webapp/WEB-INF/views/room/room.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head data-th-insert="~{templates/head :: head(~{::title})}">
-    <title data-th-text="#{titleform.room}">Title room</title>
+<head data-th-insert="~{templates/head :: head(#{titleform.room})}">
+    <title>Title room</title>
 </head>
 <body>
-    <nav data-th-insert="~{fragments/nav :: core-nav(#{titleform.room})}"></nav>
+    <nav data-th-insert="~{templates/nav :: core-nav(#{titleform.room})}"></nav>
 
     <div class="row flex-container expanded">
         <div class="columns medium-2">
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <script data-th-replace="~{fragments/core-script :: core-script}"></script>
+    <script data-th-replace="~{templates/core-script :: core-script}"></script>
     <script type="text/javascript" data-th-src="@{/resources/js/menu.js}"></script>
 </body>
 </html>
